--- a/css/app.css
+++ b/css/app.css
@@ -1,121 +1,105 @@
-html {
-    box-sizing: border-box;
-    font-size: 62.5%;
+body{
+    margin: 0px;
+    padding: 0px;
+    background: #F3F5FC;
 }
-*, *::before, *::after {
-    box-sizing: inherit;
+.container{
+    margin: auto;
+    width: 960px;
+    height: 650px;
+    padding: 5px;
 }
-body {
-    font-family: "Raleway", sans-serif;
-    font-size: 1rem;
-    line-height: 2;
-}
-
-
-/* Global */
-h1 {
-    font-size: 2rem;
-}
-
-
-
-
-.container {
-    max-height: 100vw;
-    margin: 0 auto;
-}
-.logo {
+.logo{
     width: 100%;
     float: left;
-    background: red;
 }
-.left-column {
+.left{
     float: left;
     width: 70%;
-    height: 60vh;
+    height: 70%;
     border-radius: 24px;
-    background: yellow;
 }
-.right-column {
+.right{
     float: right;
     width: 30%;
-    height: 70%;
-    border-radius: 2rem;
-    background: orange;
+    height: auto;
+    border-radius: 24px;
+    background: white;
 }
-.button {
+.left-button{
     float: left;
     width: 70%;
     height: auto;
     border-radius: 24px;
-    background: pink;
 }
-
-
-/* Header */
-.logo {
-    background-image: url(../img/Vector.png);
-    background-repeat: no-repeat;
-    background-position: left;
-    height: 5rem;
-    margin: 2rem 5rem;
-
-   
-.tittle {
-    text-align: center;
-    margin-top: 2rem;
+.logoImg{
+    margin-top: 1%;
+    margin-left: 5%;
+    float: inherit;
 }
-
-
-
-/* column center */
-
-
+.logo h1{
+    margin-left: 20%;
+}
+.title{
+    float: inherit;
+    margin-left: 60%;
+}
 .text-input{
     float: left;
     margin-left: 10%;
     margin-top: 10%;
     width: 80%;
     height: 80%;
-    color: #0a3871;
+    color: #0A3871;
     font-size: 20px;
     border: none;
     outline: none;
-    background: #f3f5fc;
+    background: #F3F5FC;
 }
-
-
-/* right column */
-.imgmuneco {
+#imgDer{
     margin-left: 2%;
     margin-top: 20%;
     width: 90%;
     height: auto;
 }
-.texto-mensaje {
+#texto{
     margin-left: 7%;
     margin-right: 5%;
 }
-.texto-mensaje2 {
+#texto2{
     float: left;
     margin-left: 10%;
-    color: #0a3871;
+    color: #0A3871;
     width: 80%;
     height: 60%;
     border: none;
     outline: none;
     font-size: 15px;
 }
-
-
-/* Botones */
-.button1,
-.button2 {
+#btn-encriptar{
     padding: 24px;
     width: 30%;
     height: 60%;
     border-radius: 24px;
-    margin-left: 10px;
+    margin-left: 15%;
     background: #0A3871;
-    color: #fff;
+
+}
+#btn-desencriptar{
+    padding: 24px;
+    width: 30%;
+    height: 60%;
+    border-radius: 24px;
+    margin-left: 10%;
+    background: #D8DFE8;
+}
+#copiar{
+    margin-left: 33%;
+    margin-top: 90%;
+    padding: 24px;
+    width: 40%;
+    height: 10%;
+    background: #D8DFE8;
+    border-radius: 24px;
+    display: none;
 }
